@@ -1,3 +1,8 @@
+Wed Dec 23 14:08:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Containers/Servant_Activator.cpp:
+          Fixed fuzz errors
+
 Wed Dec 23 14:05:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/ComponentServer/CIAO_RTComponentServer_Task.cpp:
